# opengl

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  recette.html
build_glfw/: CMakeCache.txt  Makefile  cmake_install.cmake  cmake_uninstall.cmake
build_glfw/docs/: Doxyfile  Makefile  cmake_install.cmake
build_glfw/examples/: Makefile  cmake_install.cmake
build_glfw/src/: Makefile  cmake_install.cmake
build_glfw/tests/: Makefile  cmake_install.cmake
include/: celestial_object.hpp  cube.hpp  force.hpp  mesh.h  model.h  planet.hpp  shader.h  sphere.hpp
include/glad/: glad.h
shaders/: colors.fs  colors.vs
shaders/cube_shader/basic_cube/: cube.fs
shaders/cube_shader/texture_specular/: cube_texture_specular.vs  cube_texture_specular_directionnal.fs  cube_texture_specular_point_light.fs
shaders/orbit/: orbit.fs  orbit.vs
shaders/sphere/: sphere.fs  sphere.vs  sphere_directionnal.fs
src/: cercle_EBO.cpp  compute_traj.cpp  cube.cpp  force.cpp  glad.c  going_3D.cpp  light.cpp  main.h  model.cpp  orbital_system.cpp  shaders.cpp  solar_system.cpp  sphere.cpp  template copy.cpp  template.cpp  texture.cpp  two_body_simulation.cpp
